# dnadamage2-modified

./: CMakeLists.txt  LICENSE  README.md  dnadamage2_modified.cc  dnadamage2_modified.mac  init_vis.mac  vis.mac
analysis/: PlotDamageHist.C  PlotGValue.C  PlotSpeciesPos.C  PlotSsbDsb.C  PrintDamageSummary.C  plot_G_value.py  plot_damage_location.py  print_damage_summary.py
analyze/: AnalyzeDamage.cc  CMakeLists.txt  DamageAnalyzer.cc  DamageAnalyzer.hh  PlotDamageLocation.cc  PlotSsbDsb.C  SBRatioReporter.cc
data/json/: nuc-SASA.json
data/species/: SpeciesInfo.root  SpeciesInfo.txt  SpeciesInfo_example.txt
data/strand_breaks/: StrandBreakInfo.root  StrandBreakInfo.txt  StrandBreakInfo_example.txt
include/: ActionInitialization.hh  Atom.hh  Chain.hh  Compound.hh  DNA.hh  DNAFileReader.hh  DNAGeometryConstructor.hh  DNAHandler.hh  DNAMolecules.hh  DNAStructure.hh  DetectorConstruction.hh  Ellipsoid.hh  G4EmDNAChemistry_userOption.hh  GeometryHandler.hh  ITSteppingAction.hh  ITTrackingInteractivity.hh  Model.hh  MoleculeInserter.hh  Nucleotide.hh  PhysicsList.hh  Plane.hh  PrimaryGeneratorAction.hh  Residue.hh  Run.hh  RunAction.hh  ScavengerMolecules.hh  ScoreLET.hh  ScoreSpecies.hh  ScoreStrandBreaks.hh  StackingAction.hh  Strand.hh  Structure.hh  TimeStepAction.hh
src/: ActionInitialization.cc  Atom.cc  Chain.cc  Compound.cc  DNA.cc  DNAFileReader.cc  DNAGeometryConstructor.cc  DNAHandler.cc  DNAMolecules.cc  DNAStructure.cc  DetectorConstruction.cc  Ellipsoid.cc  G4EmDNAChemistry_userOption.cc  GeometryHandler.cc  ITSteppingAction.cc  ITTrackingInteractivity.cc  Model.cc  MoleculeInserter.cc  Nucleotide.cc  PhysicsList.cc  Plane.cc  PrimaryGeneratorAction.cc  Residue.cc  Run.cc  RunAction.cc  ScavengerMolecules.cc  ScoreLET.cc  ScoreSpecies.cc  ScoreStrandBreaks.cc  StackingAction.cc  Strand.cc  Structure.cc  TimeStepAction.cc
